--- a/countries-app/package.json
+++ b/countries-app/package.json
@@ -5,7 +5,6 @@
   "dependencies": {
     "@tanstack/react-query": "^4.0.10",
     "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "classnames": "^2.3.1",
     "gsap": "^3.10.4",
@@ -24,7 +23,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "test:coverage": "react-scripts test --coverage",
+    "eject": "react-scripts eject",
+    "fix": "eslint --fix"
   },
   "browserslist": {
     "production": [
@@ -39,6 +40,8 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/react": "^14.0.0",
+    "@types/chance": "^1.1.3",
     "@types/jest": "^28.1.6",
     "@types/lodash.debounce": "^4.0.7",
     "@types/lodash.uniq": "^4.5.7",
@@ -47,6 +50,7 @@
     "@types/react-dom": "^18.0.6",
     "@typescript-eslint/eslint-plugin": "^5.30.7",
     "@typescript-eslint/parser": "^5.30.7",
+    "chance": "^1.1.11",
     "eslint": "^8.20.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-import-resolver-typescript": "^3.3.0",
@@ -54,6 +58,8 @@
     "eslint-plugin-jsx-a11y": "^6.6.1",
     "eslint-plugin-react": "^7.30.1",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "sass": "^1.54.0"
+    "msw": "1.3.2",
+    "sass": "^1.54.0",
+    "whatwg-fetch": "^3.6.20"
   }
 }
